feat: multiple transfomer support with annotation